--- a/po/fr.po
+++ b/po/fr.po
@@ -3,13 +3,14 @@
 # 
 # Translators:
 # dwan  <dwanafite@yahoo.fr>, 2012.
-# Pierre-Olivier Boulant <po.boulant@free.fr>, 2012.
+# Hans-Christoph Steiner <hans@eds.org>, 2013.
+# Pierre-Olivier Boulant <po.boulant@free.fr>, 2012-2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-12-31 20:40-0500\n"
-"PO-Revision-Date: 2013-01-01 19:36+0000\n"
+"PO-Revision-Date: 2013-01-01 19:48+0000\n"
 "Last-Translator: Pierre-Olivier Boulant <po.boulant@free.fr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -569,7 +570,7 @@ msgid "Size:"
 msgstr "Taille :"
 
 msgid "Start Here!"
-msgstr "Commencez ici !"
+msgstr "Pour commencer !"
 
 msgid "Startup flags:"
 msgstr "Options au démarrage :"
