--- a/po/ko.po
+++ b/po/ko.po
@@ -1,24 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # This file is put in the public domain.
-#
+# 
 # Translators:
 #   <gnoownow10@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
-"Report-Msgid-Bugs-To: http://bugs.puredata.info\n"
-"POT-Creation-Date: 2012-12-26 12:51-0500\n"
-"PO-Revision-Date: 2012-12-27 17:39+0000\n"
+"Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
+"POT-Creation-Date: 2012-12-31 20:40-0500\n"
+"PO-Revision-Date: 2013-01-01 08:39+0000\n"
 "Last-Translator: gnoownow10 <gnoownow10@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ko\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-
-msgid " "
-msgstr " "
 
 #, tcl-format
 msgid "%s Font"
@@ -302,10 +299,9 @@ msgstr "Jack이 설치되지 않았습니다!"
 msgid "Jack not running!"
 msgstr "Jack이 실행 중이 아닙니다!"
 
-msgid "JackOSX is not fully installed, Pd-extended cannot use Jack without it."
-msgstr ""
-"JackOSX가 제대로 설치되지 않았습니다. Pd-확장판은 JackOSX 없이 Jack을 사용할 "
-"수 없습니다."
+msgid ""
+"JackOSX is not fully installed, Pd-extended cannot use Jack without it."
+msgstr "JackOSX가 제대로 설치되지 않았습니다. Pd-확장판은 JackOSX 없이 Jack을 사용할 수 없습니다."
 
 msgid "Jump on click"
 msgstr "클릭으로 조절 가능"
@@ -729,6 +725,9 @@ msgstr "높이: "
 
 msgid "hold:"
 msgstr "켜지는 시간"
+
+msgid "http://puredata.info/docs/StartHere"
+msgstr ""
 
 msgid "intrrpt:"
 msgstr "끼어들 시 꺼지는 시간"
